--- a/languages/lisp/clojure/articles.org
+++ b/languages/lisp/clojure/articles.org
@@ -1,3 +1,4 @@
+- Simulating Machines in Clojure https://stopa.io/post/255
 - 15 https://stevelosh.com/blog/2015/12/ludum-dare-34/
 - deps
   https://blog.michielborkent.nl/new-clojure-project-quickstart.html
