--- a/languages/lisp/clojure/courses.org
+++ b/languages/lisp/clojure/courses.org
@@ -1,3 +1,4 @@
+- Course - Brian Will - the Clojure language - https://www.youtube.com/playlist?list=PLAC43CFB134E85266
 - [O'Reilly Media Infinite Skills / Adam Bard / Stuart Halloway / Neal Ford] Learning path: Clojure Fundamentals (Learning Clojure, Clojure Inside Out) [2016, ENG]
   https://rutracker.org/forum/viewtopic.php?t=5354881
 - Building Microservices with Clojure Training Video
