--- a/languages/lisp/clojure/videos.org
+++ b/languages/lisp/clojure/videos.org
@@ -1,10 +1,13 @@
+- Hickey Talks
+  https://www.youtube.com/playlist?list=PLZdCLR02grLrEwKaZv-5QbUzK0zGKOOcr
+  https://github.com/tallesl/Rich-Hickey-fanclub
 - Podcast - https://clojuredesign.club/
 - Podcast - Clojurescript - https://open.spotify.com/show/3lnWCN0PAAywiN7gaxNzKZ
-- Course - Brian Will - the Clojure language - https://www.youtube.com/playlist?list=PLAC43CFB134E85266
 - Clojure Study Group - https://www.youtube.com/playlist?list=PLpr9V-R8ZxiDjyU7cQYWOEFBDR1t7t0wv
 - ClojuRU 2019 - https://www.youtube.com/playlist?list=PLvf-wiCQYkAVvrZr53Upxti9Hr3t7V4bW
 - Fulcro – Part 1: Getting Started https://www.youtube.com/watch?v=wEjNWUMCX78
-* Channel
+
+* Channels
 |-------------------+----------------------------------------------------------|
 | andrey fadeev     | https://www.youtube.com/@andrey.fadeev                   |
 | on the code again | https://www.youtube.com/channel/UCKlYSDBb1KBcZyCRbniW1ig |
@@ -17,7 +20,8 @@
 | ClojureTV         | https://www.youtube.com/@ClojureTV                       |
 | practically       | https://www.youtube.com/@Practicalli                     |
 |-------------------+----------------------------------------------------------|
-* 12 | Rich Hickey | Clojure for Lisp Programmers
+
+* TODO 12 | Rich Hickey | Clojure for Lisp Programmers
 ** 1
 https://www.youtube.com/watch?v=cPNkH-7PRTk
 - JVM
