--- a/languages/sh/bash.org
+++ b/languages/sh/bash.org
@@ -1,3 +1,19 @@
+- terminal emulators
+  - kitty
+    - https://sw.kovidgoyal.net/kitty/
+    - glxgears https://github.com/michaeljclark/glkitty
+
+- tool: regex dot plot
+  - https://github.com/katef/libfsm/
+  - ? https://github.com/katef/kgt/
+
+- svg into png https://manpages.ubuntu.com/manpages/trusty/man1/rsvg-convert.1.html
+
+- PS1's
+  - ";"
+    - allows you to copy multiple commands (also on rc shell)
+    - PS1='%(?.%(!.#.;).%F{6}%B;%b%f) '
+
 - dialog
   - all languages https://wiki.archlinux.org/title/GTK/Development
   - https://github.com/v1cont/yad/
@@ -44,6 +60,9 @@
   https://gist.github.com/jart/bd2f603aefe6ac8004e6b709223881c0
 
 * Language
+
+- exec CMD
+  - make cmd replace the current shell, no new process is created
 
 - <filename cmd1              - alternative to cat pipe
   <filename >outfile cmd1
