--- a/languages/sh/self.org
+++ b/languages/sh/self.org
@@ -5,10 +5,15 @@
     - 2 for  dentries + inodes
     - 3 for  pagecache + dentries + inodes
 
-
 - find
   - -ok, is like -exec, but ask user before running
 
+- library display images on terminal
+  - https://www.arewesixelyet.com/ (!!)
+  - home https://saitoha.github.io/libsixel/
+  - tmux fork/rant https://github.com/csdvrx/sixel-tmux
+
+- tool: visualization https://github.com/saulpw/visidata https://www.visidata.org/
 - tool: awk like in cli, with haskell flavor https://github.com/gelisam/hawk
 - tool: json to grep-able format https://github.com/tomnomnom/gron
 - tool: shell https://www.nushell.sh/
