--- a/languages/perl.org
+++ b/languages/perl.org
@@ -5,3 +5,4 @@
 - channel https://www.youtube.com/@YAPCNA
 - Perl Web server http://tuxgraphics.org/~guido/scripts/wwwperl.txt
 - codebase https://github.com/trizen/youtube-viewer
+- codebase https://github.com/prsquee/irssi-scripts
