--- a/languages/lisp/clojure/articles.org
+++ b/languages/lisp/clojure/articles.org
@@ -12,3 +12,11 @@
 - Article:
   https://jmglov.net/blog/2024-01-17-clickr.html
   https://jmglov.net/blog/2024-01-22-clickr-goes-fe.html
+- _why guide in Clojure (old http://daveyarwood.github.io/2014/11/23/whys-guide-to-ruby-in-clojure-part-7)
+  1. https://blog.djy.io/whys-guide-to-ruby-in-clojure-part-1/
+  2. https://blog.djy.io/whys-guide-to-ruby-in-clojure-part-2/
+  3. https://blog.djy.io/whys-guide-to-ruby-in-clojure-part-3/
+  4. https://blog.djy.io/whys-guide-to-ruby-in-clojure-part-4/
+  5. https://blog.djy.io/whys-guide-to-ruby-in-clojure-part-5/
+  6. https://blog.djy.io/whys-guide-to-ruby-in-clojure-part-6/
+  7. https://blog.djy.io/whys-guide-to-ruby-in-clojure-part-7/
